trunk/Archive2/06/5d960785b5b8dd/output
main.cpp: In constructor 'B::B()':
main.cpp:9:8: error: use of deleted function 'A::~A()'
     B(){ };
        ^
main.cpp:3:5: note: declared here
     ~A() = delete;
     ^
main.cpp: In destructor 'B::~B()':
main.cpp:10:9: error: use of deleted function 'A::~A()'
     ~B(){ };
         ^
main.cpp:3:5: note: declared here
     ~A() = delete;
     ^
